[project]
name = "Abyss-api"
version = "0.1.0"
description = ""
authors = [
    {name = "javi-diaz47",email = "javiereduardo300@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.129.2,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pandas (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
